# CtrlF-TF

./: LICENSE  README.md  setup.cfg
docs/source/: command_line_program.rst  conf.py  index.rst  optimization.rst  overview.rst
src/CtrlF_TF.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ctrlf_tf/: __init__.py  cli_prgm.py  compile_utils.py  ctrlf_core.py  optimize_core.py  optimize_utils.py  parse_utils.py  pwm_utils.py  site_call_utils.py  str_utils.py  threshold_utils.py
tests/: test_str_utils.py
