[metadata]
name = CtrlF_TF
version = 1.0b6
author = Zachery Mielko
keywords = Bioinformatics, Scientific Computing
description = Protein-DNA binding site caller from kmer data
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires =
    >3.7
install_requires =
    numpy
    pandas
    scipy
    pyahocorasick
    networkx
    pybktree

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ctrlf = ctrlf_tf.cli_prgm:main
